--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+edusantara-repository-setup (0.4+edusantara3) anambas; urgency=medium
+
+  * debian/control 
+    - change edusantara-installer to blankon-installer
+  
+ -- Rahman Yusri Aftian <aftian@di.blankon.in>  Sun, 17 Aug 2014 13:52:02 +0700
+
 edusantara-repository-setup (0.4+edusantara2) anambas; urgency=medium
 
   * debian/install change to BlankOn path
